Data Avalable for hangman  must be updateable
like a bat in xml

--- a/Hangman-Game-iOS/Base.lproj/Main.storyboard
+++ b/Hangman-Game-iOS/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                     </children>
                                 </menu>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Language"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
